--- a/src/css/table.css
+++ b/src/css/table.css
@@ -3,6 +3,7 @@ table {
   font-family: 'Poppins', sans-serif;
   border-collapse: collapse;
   width: 80%;
+  text-align: center;
 }
   
 table td, table th {
