--- a/src/css/table.css
+++ b/src/css/table.css
@@ -9,7 +9,8 @@ table {
   margin-top: auto;
   border-collapse: separate;
   border-spacing: 0px;
-  border: 1px solid #000000;
+  outline: 1px solid black;
+
 }
   
 table td {
