--- a/src/css/table.css
+++ b/src/css/table.css
@@ -24,6 +24,6 @@ table th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
-  background-color: #04AA6D;
+  background-color: #E0E5E9;
   color: white;
 }
